--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Guillaume-Toussaint/Grid-Dice#readme",
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
