--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "socketio": "^1.0.0"
