--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   },
   "homepage": "https://github.com/Guillaume-Toussaint/Grid-Dice#readme",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
     "ejs": "^3.1.5",
+    "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jquery": "^3.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
-    "socketio": "^1.0.0"
+    "popper.js": "^1.16.1",
+    "socketio": "^1.0.0",
+    "y": "^0.3.2"
   }
 }
